adding backspace button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <fieldset id="typed-fieldset" class="word-block">
         <legend>Spell a Song</legend>
         <div id="typed-text"></div>
+        <button id="typed-backspace-btn" class="typed-backspace-btn" type="button" title="Backspace" aria-label="Backspace Spell a Song" > ⌫ </button>
       </fieldset>
 
       <fieldset id="now-playing-fieldset" class="word-block">
