Add configurable theming support

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         Scale
         <select id="scale-select"></select>
       </label>
+      <label id="theme-label" class="theme-label">
+        Theme
+        <select id="theme-select"></select>
+      </label>
     </div>
 
     <!-- Saved recordings grid -->
