more themes and instruments

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         Scale
         <select id="scale-select"></select>
       </label>
+      <label id="instrument-label" class="scale-label">
+        Instrument
+        <select id="instrument-select"></select>
+      </label>
       <label id="theme-label" class="theme-label">
         Theme
         <select id="theme-select"></select>
