--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
         />
         <span id="tempo-value">1.0x</span>
       </label>
+      <label id="volume-label" class="volume-label">
+        Volume
+        <input
+          id="volume-slider"
+          type="range"
+          min="0"
+          max="1.5"
+          step="0.01"
+          value="0.8"
+        />
+        <span id="volume-value">80%</span>
+      </label>
       <label id="scale-label" class="scale-label">
         Scale
         <select id="scale-select"></select>
