--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Keysonic</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   </head>
   <body>
     <!-- Title pill -->
@@ -85,11 +86,23 @@
         Instrument
         <select id="instrument-select"></select>
       </label>
+      <label class="scale-label">
+        Sound Engine
+        <select id="audio-mode-select">
+          <option value="classic">Classic</option>
+          <option value="tone">Tone Synth</option>
+        </select>
+      </label>
     </div>
 
     <!-- Saved recordings grid -->
     <div id="wm-saved-grid"></div>
-    <input type="file" id="import-file-input" accept="application/json" hidden />
+    <input
+      type="file"
+      id="import-file-input"
+      accept=".keysonic,application/vnd.keysonic+json,application/json"
+      hidden
+    />
 
     <div id="export-modal" class="modal hidden">
       <div class="modal-content">
@@ -110,6 +123,8 @@
       </div>
     </div>
 
+    <script src="https://unpkg.com/tone@14.8.49/build/Tone.js"></script>
+    <script src="https://unpkg.com/tonejs-instruments@1.0.2/dist/tonejs-instruments.min.js"></script>
     <script type="module" src="keysonic.js"></script>
   </body>
 </html>
