--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <input
       type="file"
       id="import-file-input"
-      accept=".keysonic,application/vnd.keysonic+json,application/json"
+      accept=".keysonic,application/vnd.keysonic+json"
       hidden
     />
 
