added close contorls button

--- a/index.html
+++ b/index.html
@@ -99,10 +99,13 @@
           <option value="tone">Tone Synth</option>
         </select>
       </label>
+      <button title="Hide Controls" class="panel-hide-btn" type="button" aria-label="Hide controls panel">✕</button>
     </div>
 
     <!-- Saved recordings grid -->
-    <div id="wm-saved-grid"></div>
+    <div class="saved-grid-panel">
+      <div id="wm-saved-grid"></div>
+    </div>
     <input
       type="file"
       id="import-file-input"
