full screen mode

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <option value="pads">Pad Grid</option>
             </select>
           </div>
+          <button type="button" id="menu-fullscreen-toggle">Toggle Fullscreen</button>
           <button type="button" id="controls-toggle" aria-expanded="true">Hide Controls</button>
         </div>
       </div>
@@ -137,7 +138,6 @@
     <script type="module" src="keysonic.js"></script>
   </body>
 </html>
-
 
 
 
